fixed an overflow problem

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,9 @@
-$primary-color: #333;
-$secondary-color: #666;
-$tertiary-color: #999;
+$background-color: #494949;
+$secondary-background-color: #666;
+
+$primary-color: #139696;
+$secondary-color: #2FA1A1;
+$border-color: #444;
 
 $font-color: #ddd;
 $header-color: #eee;
@@ -27,17 +30,15 @@ $header-padding: 15px;
 body {
   background: #111;
   color: $font-color;
+  display: flex;
+  flex-direction: column;
 }
 
 body, html {
-  height: 100%;
+  min-height: 100%;
 }
 
 #body-content {
-  background: $primary-color;
-  height: 100%;
-}
-
-#main-content {
-  padding: 0 15px;
+  background: $background-color;
+  flex: 1;
 }
