--- a/resources/assets/sass/components/bootstrap_overrides.scss
+++ b/resources/assets/sass/components/bootstrap_overrides.scss
@@ -1,7 +1,17 @@
+.panel {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .panel-default {
   .panel-heading {
-    background-color: #f5f5f5 !important;
+    background-color: $primary-color !important;
+    color: $header-color;
+    border-bottom: none;
   }
+
+  background-color: $secondary-background-color;
+  border-color: $border-color;
 }
 
 .form-group {
